--- a/WebApp-B2C-DotNet/Views/Shared/_LoginPartial.cshtml
+++ b/WebApp-B2C-DotNet/Views/Shared/_LoginPartial.cshtml
@@ -3,6 +3,11 @@
     <text>
         <ul class="nav navbar-nav navbar-right">
             <li>
+                <div id="nav-text" class="nav navbar-nav navbar-right">
+                    Hello Auth Eric!
+                </div>
+            </li>
+            <li>
                 <a id="profile-link">@User.Identity.Name</a>
                 <div id="profile-options" class="nav navbar-nav navbar-right">
                     <ul class="profile-links">
