--- a/WebApp-B2C-DotNet/Views/Shared/_LoginPartial.cshtml
+++ b/WebApp-B2C-DotNet/Views/Shared/_LoginPartial.cshtml
@@ -1,32 +1,34 @@
 ﻿@if (Request.IsAuthenticated)
 {
     <text>
-        <ul class="nav navbar-nav navbar-right">
-            <li>
-                <div id="nav-text" class="nav navbar-nav navbar-right">
-                    Hello Auth Eric!
-                </div>
-            </li>
-            <li>
-                <a id="profile-link">@User.Identity.Name</a>
-                <div id="profile-options" class="nav navbar-nav navbar-right">
-                    <ul class="profile-links">
-                        <li class="profile-link">
-                            @Html.ActionLink("Edit Profile", "Profile", "Account")
-                        </li>
-                    </ul>
-                </div>
-            </li>
-            <li>
-                @Html.ActionLink("Sign out", "SignOut", "Account")
-            </li>
-        </ul>
-    </text>
-}
-else
-{
-    <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Sign up", "SignUp", "Account", routeValues: null, htmlAttributes: new { id = "signUpLink" })</li>
-        <li>@Html.ActionLink("Sign in", "SignIn", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+    <ul class="nav navbar-nav">
+        <li>@Html.ActionLink("Member Content", "Member Content", "Member") </li>
     </ul>
-}
+    
+    <ul class="nav navbar-nav navbar-right">
+        <li>
+            Hello Auth Eric!
+        </li>
+        <li>
+            <a id="profile-link">@User.Identity.Name</a>
+            <div id="profile-options" class="nav navbar-nav navbar-right">
+                <ul class="profile-links">
+                    <li class="profile-link">
+                        @Html.ActionLink("Edit Profile", "Profile", "Account")
+                    </li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            @Html.ActionLink("Sign out", "SignOut", "Account")
+        </li>
+    </ul>
+    </text>
+    }
+    else
+    {
+        <ul class="nav navbar-nav navbar-right">
+            <li>@Html.ActionLink("Sign up", "SignUp", "Account", routeValues: null, htmlAttributes: new { id = "signUpLink" })</li>
+            <li>@Html.ActionLink("Sign in", "SignIn", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        </ul>
+    }
