--- a/WebApp-B2C-DotNet/Views/Shared/_LoginPartial.cshtml
+++ b/WebApp-B2C-DotNet/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
 {
     <text>
     <ul class="nav navbar-nav">
-        <li>@Html.ActionLink("Member Content", "Member Content", "Member") </li>
+        <li>@Html.ActionLink("Member Content", "Member", "Member") </li>
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
