--- a/WebApp-B2C-DotNet/Views/Home/Claims.cshtml
+++ b/WebApp-B2C-DotNet/Views/Home/Claims.cshtml
@@ -16,7 +16,17 @@
     {
         <tr>
             <td class="claim-type claim-data">@claim.Type</td>
+            if (@claim.Type = "emails")
+            {
+            <td class="claim-data">@claim.Value + " Found it!"</td>
+            }
+            else
+            {
             <td class="claim-data">@claim.Value</td>
+            }
+            
+            
+            
         </tr>
     }
 </table>
