--- a/WebApp-B2C-DotNet/Views/Home/Claims.cshtml
+++ b/WebApp-B2C-DotNet/Views/Home/Claims.cshtml
@@ -13,18 +13,15 @@
     </tr>
 
     @foreach (Claim claim in ClaimsPrincipal.Current.Claims)
+
     {
+        string myClaimType = @claim.GetType().ToString();
         <tr>
-            <td class="claim-type claim-data">@claim.Type</td>
-            if (@claim.Type.ToString() = "emails")
-            {
-            <td class="claim-data">@claim.Value & " Found Email!"</td>
-            }
-            else
-            {
+
+            <td class="claim-type claim-data"> @myClaimType </td>
             <td class="claim-data">@claim.Value</td>
-            }
-            
+           
+       
             
             
         </tr>
