--- a/WebApp-B2C-DotNet/Views/Home/Claims.cshtml
+++ b/WebApp-B2C-DotNet/Views/Home/Claims.cshtml
@@ -18,7 +18,7 @@
         string search = "emails";
         <tr>
             <td class="claim-type claim-data">@claim.Type</td>
-            if (@claim.Value.Equals(@search)
+            if (@claim.Value.Equals(@search)) = true)
             {
             <td class="claim-data">@claim.Value Found email!</td>
             }
