--- a/WebApp-B2C-DotNet/Views/Home/Claims.cshtml
+++ b/WebApp-B2C-DotNet/Views/Home/Claims.cshtml
@@ -16,7 +16,7 @@
     {
         string myClaim = @claim.Value;
         string search = "emails";
-        if (@claim.Value.Equals(@search) == true)
+        if (@claim.Value.Equals(@search).Equals(true))
         {        
             <tr>
             <td class="claim-type claim-data">@claim.Type</td>
@@ -25,8 +25,10 @@
         }
           else
             {
-            <td class="claim-type claim-data">@claim.Type</td>
-            <td class="claim-data">@claim.Value</td>
+    <tr>
+        <td class="claim-type claim-data">@claim.Type</td>
+        <td class="claim-data">@claim.Value</td>
+    </tr>
             }
          
                       
