--- a/WebApp-B2C-DotNet/Views/Home/Member.cshtml
+++ b/WebApp-B2C-DotNet/Views/Home/Member.cshtml
@@ -8,7 +8,11 @@
 
 {
 
-    <h2>Member Content!</h2>
+    <div class="jumbotron">
+    <h1>Welcome @ViewBag.claimName</h1>
+    <p class="lead">You can manage all your subscriptions to Azure in one Dashboard here!</p>
+ 
+</div>
 
 }
 else
