Added Document DB Manual Integration

--- a/WebApp-B2C-DotNet/Views/Shared/_LoginPartial.cshtml
+++ b/WebApp-B2C-DotNet/Views/Shared/_LoginPartial.cshtml
@@ -3,6 +3,7 @@
     <text>
     <ul class="nav navbar-nav">
         <li>@Html.ActionLink("Member Content", "Member", "Home") </li>
+        <li>@Html.ActionLink("User List", "Index", "Users") </li>
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
